# rcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
fixtures/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk  index.html
src/: cli.rs  lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
