[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["cutie <floation-cutie@bupt.edu.cn"]

[features]
clap = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.7"
