[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["cutie <wzxfloation_cutie@bupt.edu.cn>"]

[features]
clap = []

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.3"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
enum_dispatch = "0.3.12"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zxcvbn = "3.1.0"

[dev-dependencies]
tempfile = "3.14"
